Fixed nav alignment problem

--- a/public/style.css/style.scss
+++ b/public/style.css/style.scss
@@ -1,3 +1,7 @@
+$color__light: #169ef2;
+$color__primary: #0c87f2;
+$color__dark: #012340;
+
 * {
     padding: 0;
     margin: 0;
@@ -12,6 +16,7 @@ body {
 // UTILITIES //
 .container {
     max-width: 960px;
+    margin: 0 auto;
 }
 
 img {
@@ -26,30 +31,39 @@ a {
     text-decoration: none;
 }
 // HEADER //
+
 header {
     height: 70px;
     width: 100%;
-    background-color: #0C87F2;
+    background: $color__primary;
+}
 
-    & .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+.header__content {
+    height: 70px;
+    width: 100%;
+    background: $color__primary;
 
 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
 
-        & .header__logo {
-            display: flex;
-            align-items: center;
+    .header__logo {
+    display: flex;
+    align-items: center;
 
-            & .logo {
-                width: 50px;
-            }
-        }
-        & nav ul{
-            display: flex;
+        & img{
+            width: 50px;
+            margin-right: 1rem;
         }
     }
 
-    
+    .header__nav ul {
+        display: flex;
+
+        li {
+            padding: 1rem;
+        }
+    }
 }
